syntax = "proto3";

package example;

option java_package = "proto.user";
option java_outer_classname = "UserDefProto";

message UserDefinition {
	string userName = 1;
	int32 id = 2;
	string email = 3;
	string phoneNum = 4;
}

message UserDefinitionList {
	repeated UserDefinition userDefinitions = 1;
}

// sample user service
service User {
	rpc ReadUser(UserRequest) returns (UserDefinition);
}

// user request
message UserRequest {
	int32 id = 1;
}
