syntax = "proto3";

package example;

// check how to import.

option java_package = "example.proto.service";
option java_outer_classname = "UserServiceProto";

// sample user service
service UserService {
  rpc ReadUser(UserRequest) returns (UserResponse);
}

// user request
message UserRequest {
  int32 id = 1;
}

// user response
message UserResponse {
  int32 id = 1;
  string name = 2;
}
